--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
+    "react-snap": "^1.23.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
